File: components/nexus-cleanup/src/test/virtualthread/org/sonatype/nexus/cleanup/internal/content/method/DeleteCleanupMethodVirtualThreadTest.java