@@ -12,9 +12,13 @@
  */
 package org.sonatype.nexus.cleanup.internal.content.method;
 
+import java.lang.management.ManagementFactory;
+import java.lang.management.ThreadInfo;
+import java.lang.management.ThreadMXBean;
 import java.time.Duration;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.concurrent.CancellationException;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.ExecutorService;
@@ -23,7 +27,6 @@ import java.util.concurrent.ThreadFactory;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicInteger;
-import java.util.concurrent.atomic.AtomicLong;
 import java.util.function.BooleanSupplier;
 import java.util.stream.Stream;
 
@@ -37,14 +40,15 @@ import org.sonatype.nexus.scheduling.TaskInterruptedException;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
+import org.junit.jupiter.api.Timeout;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.junit.jupiter.api.extension.ExtendWith;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.fail;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.times;
@@ -52,9 +56,10 @@ import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
 /**
- * Tests for {@link DeleteCleanupMethod} with Java 21 Virtual Threads.
+ * Tests for {@link DeleteCleanupMethod} using Java 21 Virtual Threads.
  * 
- * @since 3.60
+ * These tests validate the behavior of the DeleteCleanupMethod under high-concurrency
+ * scenarios using Virtual Threads, ensuring proper performance and thread management.
  */
 @ExtendWith(MockitoExtension.class)
 public class DeleteCleanupMethodVirtualThreadTest
@@ -62,7 +67,6 @@ public class DeleteCleanupMethodVirtualThreadTest
 {
   private static final int BATCH_SIZE = 500;
   private static final int LARGE_COMPONENT_COUNT = 10_000;
-  private static final int CONCURRENT_TASKS = 20;
   
   @Mock
   private Repository repository;
@@ -74,9 +78,7 @@ public class DeleteCleanupMethodVirtualThreadTest
   private ContentMaintenanceFacet contentMaintenanceFacet;
 
   private DeleteCleanupMethod underTest;
-  
   private ExecutorService virtualThreadExecutor;
-  private ExecutorService platformThreadExecutor;
 
   @BeforeEach
   public void setUp() {
@@ -84,35 +86,37 @@ public class DeleteCleanupMethodVirtualThreadTest
     underTest = new DeleteCleanupMethod();
     when(repository.facet(ContentMaintenanceFacet.class)).thenReturn(contentMaintenanceFacet);
     
-    // Create executors for testing
-    ThreadFactory virtualThreadFactory = Thread.ofVirtual().factory();
-    virtualThreadExecutor = Executors.newThreadPerTaskExecutor(virtualThreadFactory);
-    platformThreadExecutor = Executors.newFixedThreadPool(Runtime.getRuntime().availableProcessors());
+    // Create a virtual thread per task executor
+    virtualThreadExecutor = Executors.newVirtualThreadPerTaskExecutor();
   }
   
   @AfterEach
-  public void tearDown() throws Exception {
-    virtualThreadExecutor.shutdown();
-    platformThreadExecutor.shutdown();
-    
-    if (!virtualThreadExecutor.awaitTermination(5, TimeUnit.SECONDS)) {
+  public void tearDown() {
+    if (virtualThreadExecutor != null && !virtualThreadExecutor.isShutdown()) {
       virtualThreadExecutor.shutdownNow();
-    }
-    
-    if (!platformThreadExecutor.awaitTermination(5, TimeUnit.SECONDS)) {
-      platformThreadExecutor.shutdownNow();
     }
   }
 
   /**
-   * Tests that the cleanup method correctly handles cancellation with virtual threads.
+   * Tests that the cleanup method fails with TaskInterruptedException when the task is cancelled,
+   * even under high concurrency with virtual threads.
    */
   @Test
-  public void testCancellationWithVirtualThreads() {
-    // Set up cancellation to occur after some components are processed
-    AtomicInteger processedBatches = new AtomicInteger(0);
-    when(cancelledCheck.getAsBoolean()).thenAnswer(invocation -> processedBatches.incrementAndGet() > 3);
+  public void testRunFailsIfTaskIsCancelledWithVirtualThreads() {
+    when(cancelledCheck.getAsBoolean()).thenReturn(true);
     
+    assertThrows(TaskInterruptedException.class, () -> {
+      underTest.run(repository, getRandomStream(LARGE_COMPONENT_COUNT), cancelledCheck);
+    });
+  }
+
+  /**
+   * Tests that the cleanup method properly batches a large stream of components for deletion
+   * when using virtual threads for processing.
+   */
+  @Test
+  public void testRunReBatchStreamWithLargeComponentCount() {
+    when(cancelledCheck.getAsBoolean()).thenReturn(false);
     when(contentMaintenanceFacet.deleteComponents(any(Stream.class)))
         .thenAnswer(invocation -> {
           Stream<FluentComponent> input = invocation.getArgument(0);
@@ -121,202 +125,229 @@ public class DeleteCleanupMethodVirtualThreadTest
 
     Stream<FluentComponent> input = getRandomStream(LARGE_COMPONENT_COUNT);
 
-    // The task should be interrupted after processing 3 batches
-    assertThrows(TaskInterruptedException.class, () -> 
-        underTest.run(repository, input, cancelledCheck));
-    
-    // Verify that exactly 3 batches were processed before cancellation
-    verify(contentMaintenanceFacet, times(3)).deleteComponents(any(Stream.class));
-    verify(cancelledCheck, times(4)).getAsBoolean(); // 3 successful + 1 that returns true
-  }
+    DeletionProgress deleted = underTest.run(repository, input, cancelledCheck);
 
+    // Validate stream is batched and cancel check is verified for each batch
+    // For 10,000 components with batch size 500, we expect 20 batches
+    verify(contentMaintenanceFacet, times(LARGE_COMPONENT_COUNT / BATCH_SIZE)).deleteComponents(any(Stream.class));
+    verify(cancelledCheck, times(LARGE_COMPONENT_COUNT / BATCH_SIZE)).getAsBoolean();
+
+    assertEquals(LARGE_COMPONENT_COUNT, deleted.getComponentCount());
+  }
+  
   /**
-   * Tests high-concurrency cleanup operations using virtual threads.
+   * Tests that cancellation works correctly during concurrent cleanup operations with virtual threads.
+   * This test simulates a scenario where a cleanup task is cancelled while processing a large number of components.
    */
   @Test
-  public void testHighConcurrencyWithVirtualThreads() throws Exception {
-    when(cancelledCheck.getAsBoolean()).thenReturn(false);
+  @Timeout(value = 30, unit = TimeUnit.SECONDS)
+  public void testCancellationDuringConcurrentCleanup() throws Exception {
+    // Set up a delayed cancellation after some components are processed
+    AtomicInteger processedBatches = new AtomicInteger(0);
+    AtomicBoolean cancelled = new AtomicBoolean(false);
+    
+    when(cancelledCheck.getAsBoolean()).thenAnswer(invocation -> {
+      // Cancel after 5 batches
+      if (processedBatches.incrementAndGet() > 5) {
+        cancelled.set(true);
+        return true;
+      }
+      return false;
+    });
+    
     when(contentMaintenanceFacet.deleteComponents(any(Stream.class)))
         .thenAnswer(invocation -> {
           Stream<FluentComponent> input = invocation.getArgument(0);
+          // Simulate some processing time
+          try {
+            Thread.sleep(50);
+          } catch (InterruptedException e) {
+            Thread.currentThread().interrupt();
+          }
           return (int) input.count();
         });
 
-    // Create multiple concurrent cleanup tasks
-    CountDownLatch latch = new CountDownLatch(CONCURRENT_TASKS);
-    AtomicInteger totalComponentsDeleted = new AtomicInteger(0);
-    
-    for (int i = 0; i < CONCURRENT_TASKS; i++) {
-      int taskId = i;
-      virtualThreadExecutor.submit(() -> {
-        try {
-          // Each task processes a different set of components
-          Stream<FluentComponent> components = getRandomStream(1000);
-          DeletionProgress progress = underTest.run(repository, components, cancelledCheck);
-          totalComponentsDeleted.addAndGet(progress.getComponentCount());
-          log.info("Task {} completed, deleted {} components", taskId, progress.getComponentCount());
-        } 
-        finally {
-          latch.countDown();
-        }
-      });
-    }
-    
-    // Wait for all tasks to complete
-    assertTrue(latch.await(30, TimeUnit.SECONDS), "All cleanup tasks should complete within timeout");
-    
-    // Verify that all components were processed
-    assertEquals(CONCURRENT_TASKS * 1000, totalComponentsDeleted.get(), 
-        "All components should be deleted across all tasks");
-  }
+    Stream<FluentComponent> input = getRandomStream(LARGE_COMPONENT_COUNT);
 
+    assertThrows(TaskInterruptedException.class, () -> {
+      underTest.run(repository, input, cancelledCheck);
+    });
+    
+    assertTrue(cancelled.get(), "Task should have been cancelled");
+    assertTrue(processedBatches.get() > 5, "At least 5 batches should have been processed before cancellation");
+  }
+  
   /**
    * Tests that virtual threads don't get pinned during cleanup operations.
-   * Thread pinning can occur when blocking operations are called from within a synchronized block.
+   * Thread pinning can occur when blocking operations are performed in synchronized blocks.
    */
   @Test
-  public void testNoPinningDuringCleanup() throws Exception {
+  @Timeout(value = 30, unit = TimeUnit.SECONDS)
+  public void testNoThreadPinningDuringCleanup() throws Exception {
     when(cancelledCheck.getAsBoolean()).thenReturn(false);
     
-    // Simulate I/O or blocking operation in the deleteComponents method
+    // Configure the mock to simulate I/O operations that could cause pinning
     when(contentMaintenanceFacet.deleteComponents(any(Stream.class)))
         .thenAnswer(invocation -> {
           Stream<FluentComponent> input = invocation.getArgument(0);
-          // Count components while simulating a blocking operation
-          int count = 0;
-          for (FluentComponent component : (Iterable<FluentComponent>) input::iterator) {
-            count++;
-            // Simulate I/O delay that could cause pinning if not handled properly
-            Thread.sleep(1);
+          // Simulate I/O operation
+          try {
+            Thread.sleep(100);
+          } catch (InterruptedException e) {
+            Thread.currentThread().interrupt();
           }
-          return count;
+          return (int) input.count();
         });
 
-    // Use system property to detect pinned threads
-    System.setProperty("jdk.tracePinnedThreads", "full");
+    // Create a thread monitoring task to detect pinning
+    ThreadMXBean threadMXBean = ManagementFactory.getThreadMXBean();
+    AtomicInteger pinnedThreadsDetected = new AtomicInteger(0);
     
-    // Track if any thread pinning warnings are detected
-    AtomicBoolean pinnedThreadDetected = new AtomicBoolean(false);
-    
-    // Custom thread factory that monitors for pinning
-    ThreadFactory monitoringVirtualThreadFactory = Thread.ofVirtual()
-        .name("cleanup-virtual-", 0)
-        .factory();
-    
-    try (ExecutorService executor = Executors.newThreadPerTaskExecutor(monitoringVirtualThreadFactory)) {
-      CompletableFuture<DeletionProgress> future = CompletableFuture.supplyAsync(() -> {
-        try {
-          return underTest.run(repository, getRandomStream(1000), cancelledCheck);
-        } 
-        catch (Exception e) {
-          if (e.getMessage() != null && e.getMessage().contains("Pinned")) {
-            pinnedThreadDetected.set(true);
-          }
-          throw new RuntimeException(e);
-        }
-      }, executor);
-      
-      DeletionProgress result = future.get(30, TimeUnit.SECONDS);
-      assertEquals(1000, result.getComponentCount());
-    }
-    
-    assertFalse(pinnedThreadDetected.get(), "No thread pinning should be detected during cleanup operations");
-  }
-
-  /**
-   * Compares performance between virtual threads and platform threads for cleanup operations.
-   */
-  @Test
-  public void testPerformanceComparisonWithVirtualThreads() throws Exception {
-    when(cancelledCheck.getAsBoolean()).thenReturn(false);
-    
-    // Simulate some processing time in the deleteComponents method
-    when(contentMaintenanceFacet.deleteComponents(any(Stream.class)))
-        .thenAnswer(invocation -> {
-          Stream<FluentComponent> input = invocation.getArgument(0);
-          // Process each component with a small delay
-          return (int) input.peek(c -> {
-            try {
-              // Small delay to simulate processing
-              Thread.sleep(1);
-            } 
-            catch (InterruptedException e) {
-              Thread.currentThread().interrupt();
+    // Start thread monitoring in a separate thread
+    CompletableFuture<Void> monitoringTask = CompletableFuture.runAsync(() -> {
+      try {
+        for (int i = 0; i < 10; i++) {
+          ThreadInfo[] threadInfos = threadMXBean.dumpAllThreads(false, false);
+          for (ThreadInfo info : threadInfos) {
+            // Check for thread names indicating pinned virtual threads
+            if (info.getThreadName().contains("Virtual Thread") && 
+                info.getThreadState() == Thread.State.RUNNABLE) {
+              pinnedThreadsDetected.incrementAndGet();
             }
-          }).count();
+          }
+          Thread.sleep(200);
+        }
+      } catch (InterruptedException e) {
+        Thread.currentThread().interrupt();
+      }
+    });
+
+    // Run the cleanup operation
+    Stream<FluentComponent> input = getRandomStream(5000);
+    underTest.run(repository, input, cancelledCheck);
+    
+    // Wait for monitoring to complete
+    monitoringTask.join();
+    
+    // We expect minimal or no thread pinning
+    // Note: This is a heuristic check and may need adjustment based on the actual implementation
+    assertTrue(pinnedThreadsDetected.get() < 5, 
+        "Detected " + pinnedThreadsDetected.get() + " potentially pinned virtual threads");
+  }
+  
+  /**
+   * Tests the performance difference between virtual threads and platform threads
+   * for cleanup operations with a large number of components.
+   */
+  @Test
+  @Timeout(value = 60, unit = TimeUnit.SECONDS)
+  public void testPerformanceComparisonWithPlatformThreads() throws Exception {
+    when(cancelledCheck.getAsBoolean()).thenReturn(false);
+    
+    // Configure the mock to simulate realistic deletion work
+    when(contentMaintenanceFacet.deleteComponents(any(Stream.class)))
+        .thenAnswer(invocation -> {
+          Stream<FluentComponent> input = invocation.getArgument(0);
+          // Simulate some processing with I/O
+          try {
+            Thread.sleep(10);
+          } catch (InterruptedException e) {
+            Thread.currentThread().interrupt();
+          }
+          return (int) input.count();
         });
 
-    // Prepare a large dataset
-    Stream<FluentComponent> largeComponentStream = getRandomStream(LARGE_COMPONENT_COUNT);
-    List<FluentComponent> componentList = new ArrayList<>();
-    largeComponentStream.forEach(componentList::add);
-    
-    // Measure execution time with platform threads
+    // Test with platform threads
     long platformThreadStartTime = System.nanoTime();
-    CompletableFuture<DeletionProgress> platformFuture = CompletableFuture.supplyAsync(
-        () -> underTest.run(repository, componentList.stream(), cancelledCheck),
-        platformThreadExecutor);
-    DeletionProgress platformResult = platformFuture.get(2, TimeUnit.MINUTES);
+    runConcurrentCleanupWithThreadFactory(Thread.ofPlatform().factory(), 100);
     long platformThreadDuration = Duration.ofNanos(System.nanoTime() - platformThreadStartTime).toMillis();
     
-    // Measure execution time with virtual threads
+    // Test with virtual threads
     long virtualThreadStartTime = System.nanoTime();
-    CompletableFuture<DeletionProgress> virtualFuture = CompletableFuture.supplyAsync(
-        () -> underTest.run(repository, componentList.stream(), cancelledCheck),
-        virtualThreadExecutor);
-    DeletionProgress virtualResult = virtualFuture.get(2, TimeUnit.MINUTES);
+    runConcurrentCleanupWithThreadFactory(Thread.ofVirtual().factory(), 100);
     long virtualThreadDuration = Duration.ofNanos(System.nanoTime() - virtualThreadStartTime).toMillis();
     
-    // Log performance results
-    log.info("Platform threads: {} components deleted in {} ms", 
-        platformResult.getComponentCount(), platformThreadDuration);
-    log.info("Virtual threads: {} components deleted in {} ms", 
-        virtualResult.getComponentCount(), virtualThreadDuration);
+    logger.info("Platform thread duration: {} ms", platformThreadDuration);
+    logger.info("Virtual thread duration: {} ms", virtualThreadDuration);
     
-    // Verify both approaches deleted the same number of components
-    assertEquals(platformResult.getComponentCount(), virtualResult.getComponentCount(), 
-        "Both thread types should delete the same number of components");
-    
-    // Note: We don't assert that virtual threads are faster as that would make the test environment-dependent
-    // Instead, we just log the results for analysis
+    // Virtual threads should generally perform better or at least similarly
+    // This is a flexible assertion as the actual performance depends on many factors
+    assertTrue(virtualThreadDuration <= platformThreadDuration * 1.2, 
+        "Virtual threads should not be significantly slower than platform threads");
   }
-
+  
   /**
-   * Tests cleanup with a very large number of components using virtual threads.
+   * Tests that a large number of concurrent cleanup operations can be handled efficiently
+   * using virtual threads.
    */
   @Test
-  public void testLargeScaleCleanupWithVirtualThreads() {
+  @Timeout(value = 60, unit = TimeUnit.SECONDS)
+  public void testHighConcurrencyWithVirtualThreads() throws Exception {
     when(cancelledCheck.getAsBoolean()).thenReturn(false);
     
-    AtomicLong processedComponents = new AtomicLong(0);
+    // Configure the mock to simulate realistic deletion work
     when(contentMaintenanceFacet.deleteComponents(any(Stream.class)))
         .thenAnswer(invocation -> {
           Stream<FluentComponent> input = invocation.getArgument(0);
-          long count = input.count();
-          processedComponents.addAndGet(count);
-          return (int) count;
+          // Simulate some processing with I/O
+          try {
+            Thread.sleep(10);
+          } catch (InterruptedException e) {
+            Thread.currentThread().interrupt();
+          }
+          return (int) input.count();
         });
 
-    // Create a very large stream of components
-    Stream<FluentComponent> largeStream = getRandomStream(LARGE_COMPONENT_COUNT);
+    // Run with a very high number of concurrent tasks using virtual threads
+    int concurrentTasks = 1000;
+    runConcurrentCleanupWithThreadFactory(Thread.ofVirtual().factory(), concurrentTasks);
     
-    // Run the cleanup
-    DeletionProgress progress = underTest.run(repository, largeStream, cancelledCheck);
-    
-    // Verify all components were processed
-    assertEquals(LARGE_COMPONENT_COUNT, progress.getComponentCount(), 
-        "All components should be processed");
-    assertEquals(LARGE_COMPONENT_COUNT, processedComponents.get(), 
-        "All components should be processed by the maintenance facet");
-    
-    // Verify the correct number of batches were processed
-    int expectedBatches = (int) Math.ceil((double) LARGE_COMPONENT_COUNT / BATCH_SIZE);
-    verify(contentMaintenanceFacet, times(expectedBatches)).deleteComponents(any(Stream.class));
-    verify(cancelledCheck, times(expectedBatches)).getAsBoolean();
+    // If we reach here without exceptions or timeouts, the test passes
+    // The @Timeout annotation will fail the test if it takes too long
+  }
+  
+  /**
+   * Helper method to run concurrent cleanup operations using the specified thread factory.
+   */
+  private void runConcurrentCleanupWithThreadFactory(ThreadFactory threadFactory, int concurrentTasks) throws Exception {
+    ExecutorService executor = Executors.newThreadPerTaskExecutor(threadFactory);
+    try {
+      CountDownLatch latch = new CountDownLatch(concurrentTasks);
+      AtomicInteger errorCount = new AtomicInteger(0);
+      
+      // Submit concurrent cleanup tasks
+      for (int i = 0; i < concurrentTasks; i++) {
+        executor.submit(() -> {
+          try {
+            // Create a small stream for each task to avoid excessive memory usage
+            Stream<FluentComponent> input = getRandomStream(100);
+            underTest.run(repository, input, cancelledCheck);
+          } catch (Exception e) {
+            errorCount.incrementAndGet();
+            logger.error("Error in concurrent cleanup task", e);
+          } finally {
+            latch.countDown();
+          }
+        });
+      }
+      
+      // Wait for all tasks to complete
+      if (!latch.await(30, TimeUnit.SECONDS)) {
+        fail("Timed out waiting for concurrent cleanup tasks to complete");
+      }
+      
+      // Verify no errors occurred
+      assertEquals(0, errorCount.get(), "No errors should occur during concurrent cleanup");
+    } finally {
+      executor.shutdownNow();
+      if (!executor.awaitTermination(5, TimeUnit.SECONDS)) {
+        logger.warn("Executor did not terminate in the expected time");
+      }
+    }
   }
 
   /**
-   * Creates a stream of mock FluentComponent objects.
+   * Creates a stream of mock FluentComponent objects for testing.
    */
   private Stream<FluentComponent> getRandomStream(final int size) {
     List<FluentComponent> resultList = new ArrayList<>(size);
